# Finance

./: .gitignore  KONZEPT.md  README.md  TECHNISCHER_PLAN.md  start.ps1  start.sh
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_accounts_categories_transactions.py  0003_budgets.py  0004_transaction_batch_id.py
backend/app/: config.py  main.py
backend/app/api/v1/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  imports.py  transactions.py
backend/app/auth/: deps.py  security.py
backend/app/db/models/: __init__.py  account.py  budget.py  category.py  household.py  transaction.py  user.py
backend/app/schemas/: account.py  auth.py  budget.py  category.py  transaction.py
backend/app/services/: categorizer.py
backend/app/services/importers/: __init__.py  base.py  csv_c24.py  csv_ing.py  csv_sparkasse.py
docker/: .env.example  compose.dev.yml  compose.yml
docs/pages/: index.html
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/accounts/: page.tsx
frontend/src/app/(app)/budgets/: page.tsx
frontend/src/app/(app)/contracts/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/: sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  select.tsx
frontend/src/lib/: api.ts  auth.ts  utils.ts
(+5 files in other folders)
